@@ -275,7 +275,7 @@ public class CylindricalMover implements BlockMover
         else
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
 
-        if (!onDisable)
+        if (!onDisable && door.isOpen())
             plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
