@@ -183,7 +183,7 @@ public class FlagMover implements BlockMover
         else
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
 
-        if (!onDisable)
+        if (!onDisable && door.isOpen())
             plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
