@@ -221,7 +221,7 @@ public class SlidingMover implements BlockMover
         else
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
 
-        if (!onDisable)
+        if (!onDisable && door.isOpen())
             plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
