@@ -213,7 +213,7 @@ public class VerticalMover implements BlockMover
         else
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
 
-        if (!onDisable)
+        if (!onDisable && door.isOpen())
             plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
